# countries

./: .gitmodules  Cargo.toml  README.md  build.rs  data.json
codegen/: Cargo.toml
codegen/src/: main.rs
src/: async_graphql.rs  consts.rs  enums.rs  lib.rs  serde.rs  types.rs
templates/: enum.tpl  enum_deref.tpl  struct.tpl
