[package]
name = "countires"
version = "0.1.0"
edition = "2021"
description = "A placeholder"
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = []
alloc = []
flags = ["bitflags"]

[dependencies]
bitflags = { version = "1.3", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[build-dependencies]
heck = "0.4"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.17"