[package]
name = "countires"
version = "0.1.0"
edition = "2021"
description = "All world countries, ISO- codes and data points about them, as well as tools for interfacing with that data."
repository = "https://github.com/al8n/countries"
keywords = ["countires", "iso", "iso3166", "iso4217", "locale"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = []
alloc = []
flags = ["bitflags"]

[dependencies]
bitflags = { version = "1.3", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[build-dependencies]
heck = "0.4"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.17"