[package]
name = "countires"
version = "0.1.2"
edition = "2021"
description = "All world countries, ISO- codes and data points about them, as well as tools for interfacing with that data."
repository = "https://github.com/al8n/countries"
keywords = ["countires", "iso", "iso3166", "iso4217", "locale"]
license = "MIT/Apache-2.0"

[workspace]
members = [".", "codegen"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
flags = ["bitflags"]

[dependencies]
bitflags = { version = "1.3", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
async-graphql = { version = "4", optional = true }

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]